ajout de Wall, Brick et BreakoutTestConsole